# wasp

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  wasp  wasp.py
debian/: changelog  control  copyright  install
man/: wasp
src/: Details.py  Utilities.py  details.py  licenses.json  utilities.py
src/entrypoints/: wasp.py
tests/: test_colors.py  test_details.py  test_utilities.py
