[tool.poetry]
name = "wasp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pdbpp = "^0.10.3"
Faker = "^8.11.0"
black = "^21.7b0"
flake8 = "^3.9.2"
mypy = "^0.910"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
extend-ignore = ["W503"]
